0.1.4 - xx.xx.xx
General:
  * Added support for more keyboard keys.
  * Custom player names.
  * Improved random number generation on Windows.
Balancing:
  * Mole is now better at escaping with an added invincibility bonus.
  * The duration of Confusion has been further reduced from 1.0 s to 0.9 s.

0.1.3 - 20.05.11
  * A new weapon has been added: Ghost Walk.
  * Fixed several crucial bugs. Random suicides should no longer occur.
  * The duration of Confusion has been further reduced from 1.1 s to 1.0 s.

0.1.2 - 07.03.11
  * Some weapons can now be used multiple times.
  * Decreased duration of Confusion from 1.8 s. to 1.1 s.
  * Weapon descriptions at the weapon selection screen.

0.1.1 - 12.01.11
  * Window icon.
  * Mouse button support.
  * Players will win when they reach the score cap.
  * Emacs/vi input sets for menus.

0.1.0 - 25.06.10
  * Initial release.