@@ -5,8 +5,10 @@ Simen Heggestøyl - <simenheg@gmail.com>
     * sounds
 
 Patrick Bauge Skevik - <patrisk@student.matnat.uio.no>
-    * windows maintainer
-    * code patches
+    * weapon design: Switch-aroo
+
+Håkon Normann
+    * alpha tester
 
 Kevin MacLeod - (incompetech.com)
     * music: Padanaya Blokov (license: CC-BY)
